Pagination and Animation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <div class="products-grid" id="products-grid">
             <div class="loading">Loading products...</div>
         </div>
+        <div class="pagination-controls" id="pagination-controls"></div>
     </section>
 
     <!-- Product Modal (Detail Page) -->
@@ -79,9 +80,9 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>&copy; 2024 ShopHub. All rights reserved.</p>
+        <p>&copy; 2025 ShopHub. All rights reserved.</p>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/motion@latest/dist/motion.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
